--- a/draft-ietf-regext-epp-delete-bcp-09.html
+++ b/draft-ietf-regext-epp-delete-bcp-09.html
@@ -1550,6 +1550,7 @@ li > p:last-of-type:only-child {
 </nav>
 </section>
 </div>
+<div id="introduction">
 <section id="section-1">
       <h2 id="name-introduction-2">
 <a href="#section-1" class="section-number selfRef">1. </a><a href="#name-introduction-2" class="section-name selfRef">Introduction</a>
@@ -1602,10 +1603,12 @@ li > p:last-of-type:only-child {
                 resolvers may then create large numbers of spurious DNS queries for an unresolvable
                 domain. Note that renaming a host object to a name of an external host cannot be
                 reversed by the EPP client.<a href="#section-1-8" class="pilcrow">¶</a></p>
-<p id="section-1-9">This document describes the rationale for the "<span class="bcp14">SHOULD NOT</span> be deleted" text, the risk
-                associated with host object renaming, and the best practices that can be used to
-                mitigate that risk.<a href="#section-1-9" class="pilcrow">¶</a></p>
+<p id="section-1-9">This document describes the rationale for the "<span class="bcp14">SHOULD NOT</span> be deleted" text and the risk 
+                associated with host object renaming. <a href="#practice-analysis" class="auto internal xref">Section 5</a> includes a detailed analysis 
+                of the practices that have been and can be used to mitigate that risk. 
+                <a href="#recommendations" class="auto internal xref">Section 6</a> includes specific recommendations for the best practices.<a href="#section-1-9" class="pilcrow">¶</a></p>
 </section>
+</div>
 <section id="section-2">
       <h2 id="name-conventions-used-in-this-doc">
 <a href="#section-2" class="section-number selfRef">2. </a><a href="#name-conventions-used-in-this-doc" class="section-name selfRef">Conventions Used in This Document</a>
@@ -2602,6 +2605,8 @@ li > p:last-of-type:only-child {
 <p id="appendix-A-21">09:<a href="#appendix-A-21" class="pilcrow">¶</a></p>
 <ol start="1" type="1" class="normal type-1" id="appendix-A-22">
                 <li id="appendix-A-22.1">Updated <a href="#renaming-as112" class="auto internal xref">Section 5.1.3.2</a> for clarity around empty subdomain, to remove confusing/incorrect claim around "valid" DNS name, and to add DNAME mention.<a href="#appendix-A-22.1" class="pilcrow">¶</a>
+</li>
+        <li id="appendix-A-22.2">Added explanatory sentences to <a href="#introduction" class="auto internal xref">Section 1</a>.<a href="#appendix-A-22.2" class="pilcrow">¶</a>
 </li>
       </ol>
 </section>
