updates to sacrificial name server section for DNS directorate review (Ralf Weber)

--- a/draft-ietf-regext-epp-delete-bcp-09.html
+++ b/draft-ietf-regext-epp-delete-bcp-09.html
@@ -1876,13 +1876,11 @@ li > p:last-of-type:only-child {
                         services to maintain and protect the superordinate domain and the
                         host object.  Failures to maintain these registrations have allowed
                         domain hijacks <span>[<a href="#risky-bizness" class="cite xref">risky-bizness</a>]</span>.
-                        The sacrificial name server should run a DNS resolution service
-                        capable of responding with an authoritative non-error, non-failure
-                        response for requests made for associated domains.  The service
-                        <span class="bcp14">SHOULD</span> provide responses that indicate problems with a domain's
-                        delegation, such as non-existence or include controlled interruption
-                        IP addresses <span>[<a href="#RFC8023" class="cite xref">RFC8023</a>]</span>.
-                            This practice has been observed in use.<a href="#section-5.1.3.4-1" class="pilcrow">¶</a></p>
+                        The sacrificial name server should resolve to one or more IP addresses 
+                        and the client should operate an authoritative DNS name server on those addresses.  
+                        The name server <span class="bcp14">SHOULD</span> provide responses that indicate problems with a domain's 
+                        delegation, such as non-existence or controlled interruption IP addresses <span>[<a href="#RFC8023" class="cite xref">RFC8023</a>]</span>.
+                        This practice has been observed in use.<a href="#section-5.1.3.4-1" class="pilcrow">¶</a></p>
 <div id="control-rename-pros">
 <section id="section-5.1.3.4.1">
               <h6 id="name-practice-benefits-19">
@@ -2607,6 +2605,8 @@ li > p:last-of-type:only-child {
                 <li id="appendix-A-22.1">Updated <a href="#renaming-as112" class="auto internal xref">Section 5.1.3.2</a> for clarity around empty subdomain, to remove confusing/incorrect claim around "valid" DNS name, and to add DNAME mention.<a href="#appendix-A-22.1" class="pilcrow">¶</a>
 </li>
         <li id="appendix-A-22.2">Added explanatory sentences to <a href="#introduction" class="auto internal xref">Section 1</a>.<a href="#appendix-A-22.2" class="pilcrow">¶</a>
+</li>
+        <li id="appendix-A-22.3">Clarified sacrificial name server requirements in <a href="#control-rename" class="auto internal xref">Section 5.1.3.4</a>.<a href="#appendix-A-22.3" class="pilcrow">¶</a>
 </li>
       </ol>
 </section>
