make explicit that non-recommended analyzed practices are not recommended

--- a/draft-ietf-regext-epp-delete-bcp-09.html
+++ b/draft-ietf-regext-epp-delete-bcp-09.html
@@ -2366,6 +2366,7 @@ li > p:last-of-type:only-child {
                     that offers no additional operational benefit.<a href="#section-6-2.3" class="pilcrow">¶</a>
 </li>
       </ul>
+<p id="section-6-3">Other practices in <a href="#practice-analysis" class="auto internal xref">Section 5</a> are <span class="bcp14">NOT RECOMMENDED</span>.<a href="#section-6-3" class="pilcrow">¶</a></p>
 </section>
 </div>
 <div id="IANA">
@@ -2606,7 +2607,9 @@ li > p:last-of-type:only-child {
 </li>
         <li id="appendix-A-22.2">Added explanatory sentences to <a href="#introduction" class="auto internal xref">Section 1</a>.<a href="#appendix-A-22.2" class="pilcrow">¶</a>
 </li>
-        <li id="appendix-A-22.3">Clarified sacrificial name server requirements in <a href="#control-rename" class="auto internal xref">Section 5.1.3.4</a>.<a href="#appendix-A-22.3" class="pilcrow">¶</a>
+        <li id="appendix-A-22.3">Explicitly state that other practices in analysis section are not recommended in <a href="#recommendations" class="auto internal xref">Section 6</a>.<a href="#appendix-A-22.3" class="pilcrow">¶</a>
+</li>
+        <li id="appendix-A-22.4">Clarified sacrificial name server requirements in <a href="#control-rename" class="auto internal xref">Section 5.1.3.4</a>.<a href="#appendix-A-22.4" class="pilcrow">¶</a>
 </li>
       </ol>
 </section>
