add Dave Blacka to acknowlegements

--- a/draft-ietf-regext-epp-delete-bcp-09.html
+++ b/draft-ietf-regext-epp-delete-bcp-09.html
@@ -2418,7 +2418,7 @@ li > p:last-of-type:only-child {
       </h2>
 <p id="section-9-1">The authors would like to thank the following people for their contributions to this
                 document: Brian Dickson, James Gould, Pawel Kowalik, Mario Loffredo, James Mitchell, Matthew Thomas, Peter
-                Thomassen, Duane Wessels.<a href="#section-9-1" class="pilcrow">¶</a></p>
+                Thomassen, Duane Wessels, David Blacka.<a href="#section-9-1" class="pilcrow">¶</a></p>
 </section>
 </div>
 <section id="section-10">
