add to change log

--- a/draft-ietf-regext-epp-delete-bcp-10.html
+++ b/draft-ietf-regext-epp-delete-bcp-10.html
@@ -2624,6 +2624,8 @@ li > p:last-of-type:only-child {
 </li>
         <li id="appendix-A-24.3">Remove test/experiment in <a href="#renaming-existing-special-use-reserved" class="auto internal xref">Section 5.1.4.2.1</a>.<a href="#appendix-A-24.3" class="pilcrow">¶</a>
 </li>
+        <li id="appendix-A-24.4">Change <a href="#control-rename" class="auto internal xref">Section 5.1.3.4</a> to require authoritative DNS service (previous SHOULD changed to MUST).<a href="#appendix-A-24.4" class="pilcrow">¶</a>
+</li>
       </ol>
 </section>
 <div id="authors-addresses">
